--- a/nginx.conf
+++ b/nginx.conf
@@ -1,41 +1,35 @@
 server {
 	listen 80;
-	server_name ricterz.me;
+	server_name ricterz.me moe.ci loli.club;
 	rewrite ^/(.*)$ https://ricterz.me/$1 permanent;
 }
-
 
 server {
 	listen 443 ssl;
 	server_name ricterz.me;
-	charset utf-8;
 	index index.txt index.sh;
-	root /home/ricter/wwwroot/blog;
+	charset utf-8;
 
-        ssl_certificate /etc/nginx/ssl/new/server.crt;
-	ssl_certificate_key /etc/nginx/ssl/new/server.key;
+	set $root /home/ricter/wwwroot/blog;
+	root $root;
 
-	location ^~/diaries {
+        ssl_certificate ssl/new/server.crt;
+	ssl_certificate_key ssl/new/server.key;
+
+	location ~ ^/(diaries|posts) {
 		autoindex on;
 		auth_basic "Who are you?";
 		auth_basic_user_file conf.d/passwd;
-	}
-
-	location ^~/posts {
-		autoindex on;
-		auth_basic "Who are you?";
-		auth_basic_user_file conf.d/passwd;
-		
 	}
 
 	location / {
-		root /home/ricter/wwwroot/blog;
+		root $root;
 		include fastcgi_params;
-		fastcgi_param SCRIPT_FILENAME /home/ricter/wwwroot/blog/index.sh;
+		fastcgi_param SCRIPT_FILENAME $root/index.sh;
 		fastcgi_pass unix:/var/run/fcgiwrap.socket;
 	}
 
 	location ~* ^.+\.(txt|ico) {
-		root /home/ricter/wwwroot/blog;
+		root $root;
 	}
 }
