--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,13 @@ server {
 		auth_basic_user_file conf.d/passwd;
 	}
 
+	location /timeline {
+		root $root;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $root/timeline.sh;
+		fastcgi_pass unix:/var/run/fcgiwrap.socket;
+	}
+
 	location / {
 		root $root;
 		include fastcgi_params;
