--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,13 @@ server {
         ssl_certificate ssl/new/server.crt;
 	ssl_certificate_key ssl/new/server.key;
 
+	error_page 401 /401.txt;
+
+        location = /401.txt {
+                root $root/error_pages;
+                internal;
+        }
+
 	location ~ ^/(diaries|posts) {
 		autoindex on;
 		auth_basic "Who are you?";
