refract: more flexible, add md2html converter

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,49 +1,69 @@
 server {
-	listen 80;
-	server_name ricterz.me moe.ci loli.club;
-	rewrite ^/(.*)$ https://ricterz.me/$1 permanent;
+    listen 80;
+    server_name chenxy.me b1n.top;
+    rewrite ^/(.*)$ https://chenxy.me/$1 permanent;
 }
 
 server {
-	listen 443 ssl;
-	server_name ricterz.me;
-	index index.txt index.sh;
-	charset utf-8;
+    listen 443 ssl;
+    server_name chenxy.me;
 
-	set $root /home/ricter/wwwroot/blog;
-	root $root;
+    index index.txt;
+    charset utf-8;
 
-        ssl_certificate ssl/new/server.crt;
-	ssl_certificate_key ssl/new/server.key;
+    set $root /blog;
+    root $root;
 
-	error_page 401 /401.txt;
+    location / {
+        root $root;
+        include fastcgi_params;
+        fastcgi_pass unix:/var/run/fcgiwrap.socket;
+        fastcgi_param SCRIPT_FILENAME $root/.index.sh;
+        fastcgi_param BLOG_PWD /;
+        fastcgi_param BLOG_ROOT $root;
+        fastcgi_param BLOG_TITLE "Chen Xiaoyuan's Blog";
+        fastcgi_param BLOG_MSG "Welcome, my friend.\nI'm still working on my backend code.";
+    }
 
-        location = /401.txt {
-                root $root/error_pages;
-                internal;
-        }
+    location ~ /\..+ {
+        return 404;
+    }
 
-	location ~ ^/(diaries|posts) {
-		autoindex on;
-		auth_basic "Who are you?";
-		auth_basic_user_file conf.d/passwd;
-	}
+    location ~ ^/(posts)/(.*)$ {
+        root $root;
+        include fastcgi_params;
+        fastcgi_pass unix:/var/run/fcgiwrap.socket;
+        fastcgi_param SCRIPT_FILENAME $root/$1/.index.sh;
+        fastcgi_param BLOG_PWD /$1/$2;
+        fastcgi_param BLOG_ROOT $root;
+        fastcgi_param BLOG_TITLE "Chen Xiaoyuan's Blog";
+        fastcgi_param BLOG_MSG "Welcome, my friend.";
+    }
 
-	location /timeline {
-		root $root;
-		include fastcgi_params;
-		fastcgi_param SCRIPT_FILENAME $root/timeline.sh;
-		fastcgi_pass unix:/var/run/fcgiwrap.socket;
-	}
+    location ~ ^/(private)/(.*)$ {
+        root $root;
+        auth_basic "who are you?";
+        auth_basic_user_file $root/.htpasswd;
 
-	location / {
-		root $root;
-		include fastcgi_params;
-		fastcgi_param SCRIPT_FILENAME $root/index.sh;
-		fastcgi_pass unix:/var/run/fcgiwrap.socket;
-	}
+        include fastcgi_params;
+        fastcgi_pass unix:/var/run/fcgiwrap.socket;
+        fastcgi_param SCRIPT_FILENAME $root/$1/.index.sh;
+        fastcgi_param BLOG_PWD /$1/$2;
+        fastcgi_param BLOG_ROOT $root;
+        fastcgi_param BLOG_TITLE "Chen Xiaoyuan's Blog";
+        fastcgi_param BLOG_MSG "Welcome, my friend.";
+    }
 
-	location ~* ^.+\.(txt|ico) {
-		root $root;
-	}
+    # location ~* ^/(?!private).+\.(txt|ico|md|html)$ {
+    #     root $root;
+    # }
+
+    location ~* ^.+\.(txt|ico|md|html)$ {
+        root $root;
+    }
+
+    ssl_certificate /etc/letsencrypt/live/chenxy.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/chenxy.me/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
